# rain_ws

./: .gitmodules  README.md  clear_ws.sh  form_tools.sh  machines.txt  setup.sh
src/formation/: CMakeLists.txt  README.md  package.xml
src/formation/config/: params.yaml
src/formation/include/formation/: data_recorder.hpp  parameter_manager.hpp  utils.hpp
src/formation/launch/: fw_formation_launch.py  mc_formation_launch.py  mc_single_launch.py  mc_single_prelaunch.py
src/formation/msg/: UavCommand.msg  UavStatus.msg
src/formation/src/: CMakeLists.txt
src/formation/src/commander/: CMakeLists.txt  commander.cpp
src/formation/src/fw_formation_control/: CMakeLists.txt  cross_node.cpp  fw_formation_control.cpp  fw_formation_control.hpp  test.cpp
src/formation/src/fw_formation_control/model/: CMakeLists.txt
src/formation/src/fw_formation_control/model/FMS_TECS/: CMakeLists.txt  FMS.h
src/formation/src/fw_formation_control/model/FMS_TECS/src/: FMS_TECS.c  FMS_TECS.h  Formation_FMS.c  Formation_FMS.h  norm_FqL2z8vo.c  norm_FqL2z8vo.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_atan2f_snf.c  rt_atan2f_snf.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h  zero_crossing_types.h
src/formation/src/gcs_transfer/: CMakeLists.txt
src/formation/src/gcs_transfer/message_definitions/: gcs_transfer.xml
src/formation/src/gcs_transfer/src/: gcs_transfer.cpp
src/formation/src/mc_formation_control/: CMakeLists.txt  mc_formation_control.cpp  mc_formation_control.hpp
src/formation/src/serial_udp_bridge/: CMakeLists.txt  serial_udp_bridge.cpp
src/mqsls/: CMakeLists.txt  package.xml
src/mqsls/config/: params.yaml  pkgconfig.sh
src/mqsls/gz/models/ideal_uav/: model.config  model.sdf
src/mqsls/gz/models/payload/: model.config  model.sdf  model1.sdf
src/mqsls/gz/models/rope/: gen_rope.py  model.config  model.sdf
src/mqsls/gz/worlds/: ideal_3dof_mqsls.sdf  mqsls.sdf  simple_pendulum.sdf  x500_3dof_mqsls.sdf
src/mqsls/include/mqsls/: AlphaFilter.hpp  SlidingWindowFilter.hpp  component.hpp  gz_component.hpp  mqsls.hpp  noise_generator.hpp  parameter_manager.hpp  perf_counter.hpp  pid.hpp  px4_actuator.hpp  px4_component.hpp  trajectory_generator.hpp  utils.hpp
src/mqsls/launch/: actual_3dof_mqsls_launch.py  actual_3dof_mqsls_prelaunch.py  hil_3dof_mqsls_launch.py  ideal_3dof_mqsls_launch.py  ideal_mqsls_launch.py  mc_mqsls_launch.py  sil_3dof_mqsls_launch.py  x500_3dof_mqsls_launch.py
src/mqsls/msg/: FollowerRecv.msg  FollowerSend.msg  ForceOpt.srv
src/mqsls/scripts/: paws_verify.py
src/mqsls/src/: CMakeLists.txt
src/mqsls/src/actual/: CMakeLists.txt  actual_mqsls_control.cpp
src/mqsls/src/controller/: 3dof_mqsls_controller.cpp  3dof_mqsls_controller.hpp  CMakeLists.txt  px4_actuator.cpp
src/mqsls/src/controller/model/: CMakeLists.txt  controller.hpp  copy_source.sh
src/mqsls/src/controller/model/controller/: control_3dof.c  control_3dof.h  rtmodel.h  rtwtypes.h
src/mqsls/src/force_planner/: CMakeLists.txt  force_planner.cpp
src/mqsls/src/force_planner/model/: CMakeLists.txt  copy_source.sh  force_opt.hpp
src/mqsls/src/force_planner/model/force_opt/: mso_forces.c  rtGetNaN.h  rt_nonfinite.c  rtwtypes.h
src/mqsls/src/ideal/: CMakeLists.txt  data_recorder.hpp  ideal_mqsls_control.cpp  ideal_mqsls_control.hpp
src/mqsls/src/model/: CMakeLists.txt  copy_source.sh  interface.hpp
src/mqsls/src/model/controller/: control_3dof.c  control_3dof.cpp  control_3dof.h  payload_controller.cpp  payload_controller.h  rtmodel.h  rtwtypes.h
src/mqsls/src/model/force_opt/: mso_forces.h  mso_forces_types.h  optimize_forces.c  optimize_forces.h  optimize_forces_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
src/mqsls/src/multicopter/: CMakeLists.txt  mc_mqsls_control.cpp  mc_mqsls_control.hpp
src/mqsls/src/plugin/: CMakeLists.txt
src/mqsls/src/plugin/gz_plugin/: CMakeLists.txt  gz_plugin.cpp
src/mqsls/src/plugin/mocap_plugin/: CMakeLists.txt  mocap_plugin.cpp
src/mqsls/src/plugin/mocap_plugin/ros1_ws/src/ros1_bridge/: package.xml
src/mqsls/src/plugin/mocap_plugin/ros1_ws/src/ros1_bridge/src/: ros1_mocap_bridge.cpp
src/mqsls/src/plugin/rtk_plugin/: CMakeLists.txt  crc16.h  lib_crc16.c  rtk_plugin.cpp  rtk_plugin.hpp  septentrio.hpp  unicore.hpp
src/mqsls/src/sim/: CMakeLists.txt  sim_mqsls_control.cpp  virtual_wrench_plugin.cpp
src/mqsls/src/utils/: CMakeLists.txt  Dockerfile  MoCap_ToDoList.md  ros2_mocap_bridge.cpp
src/mqsls/src/utils/ros1_ws/src/ros1_bridge/: CMakeLists.txt
src/mqsls/src/utils/ros1_ws/src/ros1_bridge/src/: ros1_mocap_bridge.cpp
src/pcl_det/: CMakeLists.txt  README.md  package.xml
src/pcl_det/src/: CMakeLists.txt  pcl_det.cpp  reg3d.cpp
src/px4_msgs/: .gitignore  CMakeLists.txt  copy_px4_msgs.py  dds_topics.yaml  package.xml
src/px4_msgs/msg/: FollowerSend.msg  FormationLogger.msg  FormationMission.msg  ManualControlSwitches.msg  RcChannels.msg
