if(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "x86_64")
    message(STATUS "Building for x86_64")
    set(ENABLE_GAZEBO  True)
elseif(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "aarch64")
    message(STATUS "Building for aarch64")
    set(ENABLE_GAZEBO  False)
else()
    message(FATAL_ERROR "Unsupported architecture")
endif()

if(ENABLE_GAZEBO)
    add_subdirectory(gz_plugin)
else()
    # add_subdirectory(mocap_plugin)
endif()
add_subdirectory(mocap_plugin)